# hasha

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-kits.json
src/: SPEC  main.cpp
src/Interpreter/: ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionResult.h  HashaVariable.h  HashaVariableType.h  Interpreter.cpp  Interpreter.h  SymbolTable.cpp  SymbolTable.h  SymbolTableTree.cpp  SymbolTableTree.h  SymbolTree.cpp  SymbolTree.h  Variable.cpp  Variable.h
src/Interpreter/Evaluators/: ExpressionEvaluator.cpp  ExpressionEvaluator.h  FunctionEvaluator.cpp  FunctionEvaluator.h
src/Interpreter/Language/: Variable.cpp  Variable.h
src/Interpreter/Types/: DefaultOperations.h  DefaultTypes.h
src/Interpreter/Vistors/: BoxedTypeStringifier.h  GlobalBlockVisitor.cpp  GlobalBlockVisitor.h  TokenVisitor.cpp  TokenVisitor.h
src/Lexer/: Analyzer.cpp  Analyzer.h  Constants.h  Lexeme.cpp  Lexeme.h  Lexer.cpp  Lexer.h  LexerTypes.h
src/Parser/: Context.cpp  Context.h  IfStatement.cpp  IfStatement.h  Parser.cpp  Parser.h  ParserState.h  Pattern.h  TokenForwards.h
src/Parser/Declarations/: ArrayDeclaration.cpp  ArrayDeclaration.h  VariableDeclaration.cpp  VariableDeclaration.h
src/Parser/Scope/: GlobalScope.cpp  GlobalScope.h  Scope.cpp  Scope.h
src/Parser/Tokens/: Assignment.cpp  Assignment.h  Block.cpp  Block.h  Declaration.cpp  Declaration.h  Expression.cpp  Expression.h  Function.cpp  Function.h  FunctionCall.cpp  FunctionCall.h  Identifier.cpp  Identifier.h  Literal.cpp  Literal.h  Operator.cpp  Operator.h  Parameter.cpp  Parameter.h  ReturnToken.cpp  ReturnToken.h  Token.cpp  Token.h  TokenBase.cpp  TokenBase.h  VariableAssignment.cpp  VariableAssignment.h  VariableDeclaration.cpp  VariableDeclaration.h
src/Parser/Tokens/Assignment/: ArrayAssignment.cpp  ArrayAssignment.h  ArrayInlineAssignment.cpp  ArrayInlineAssignment.h  Assignment.cpp  Assignment.h  InlineAssignment.cpp  InlineAssignment.h
src/Parser/Tokens/Expression/: Expression.cpp  Expression.h  ReturnExpression.cpp  ReturnExpression.h
src/Parser/Tokens/Expressions/: ArrayExpression.cpp  ArrayExpression.h  Expression.cpp  Expression.h  LiteralExpression.cpp  LiteralExpression.h
src/Parser/Tokens/Literal/: BooleanLiteral.cpp  BooleanLiteral.h  FloatingPointLiteral.cpp  FloatingPointLiteral.h  IntegerLiteral.cpp  IntegerLiteral.h  Literal.cpp  Literal.h  NumericLiteral.cpp  NumericLiteral.h  StringLiteral.cpp  StringLiteral.h
src/Parser/Tokens/Operator/: BinaryOperator.cpp  BinaryOperator.h  BooleanOperator.cpp  BooleanOperator.h  NumericOperator.cpp  NumericOperator.h  Operator.cpp  Operator.h  UnaryOperator.cpp  UnaryOperator.h
src/Parser/Tokens/Statement/: ElifStatement.cpp  ElifStatement.h  ElseStatement.cpp  ElseStatement.h  IfStatement.cpp  IfStatement.h
src/Parser/Tokens/Type/: ArrayType.cpp  ArrayType.h  DefaultParserTypes.h  DefaultTypes.h  GenericType.cpp  GenericType.h  NormalType.cpp  NormalType.h  Type.cpp  Type.h  TypeComparer.h  TypeToStringBuilder.h
src/Scope/: Scope.cpp  Scope.h  ScopeTree.cpp  ScopeTree.h  SymbolTable.cpp  SymbolTable.h  SymbolTree.cpp  SymbolTree.h
src/SharedTypes/: LiteralType.h  OperatorType.h
src/TypeChecker/: TypeChecker.cpp  TypeChecker.h
src/Utils/: Box.h  ErrorOr.h  Helpers.h  Overload.h  Span.h
src/Utils/Serializer/: JsonConverter.cpp  JsonConverter.h  Serializer.cpp  Serializer.h
